--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#007bff" />
     <meta
       name="description"
-      content="Генерация отчетов по качеству кода GitHub репозиториев"
+      content="Генерация отчетов по качеству кода репозиториев"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GitHub Report Generator</title>
+    <title>SFERA Report Generator</title>
   </head>
   <body>
     <noscript>
